oracle/prod/picseal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picseal-deployment
  labels:
    app: picseal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: picseal
  template:
    metadata:
      labels:
        app: picseal
    spec:
      containers:
      - name: picseal
        image: zhiweio/picseal:latest
        ports:
        - containerPort: 80
