oracle/prod/picseal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picseal-service
spec:
  type: ClusterIP
  selector:
    app: picseal
  ports:
  - port: 80
    targetPort: 80
