oracle/prod/picseal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picseal-ingress
spec:
  rules:
  - host: picseal.haijin666.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: picseal-service
            port:
              number: 80
